--- a/packages/pegjs/package.json
+++ b/packages/pegjs/package.json
@@ -16,6 +16,9 @@
     "esm": "3.2.25",
     "lodash": "^4.17.15"
   },
+  "optionalDependencies": {
+    "prettier": "^2.0.5"
+  },
   "devDependencies": {
     "@types/lodash": "^4.14.157"
   },
