--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "nyc": "15.1.0",
     "rimraf": "3.0.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test"
+    }
+  },
   "engines": {
     "node": ">= 12.0"
   },
@@ -45,6 +50,7 @@
     "avec-ts": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "esm": "^3.2.25",
+    "husky": "^4.2.5",
     "lebab": "^3.1.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
