--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .ts .",
     "spec": "mocha --reporter progress",
     "benchmark": "node tools/benchmark",
-    "build-parser": "pegjs -c src/pegjs.config.js && lebab --replace ./packages/pegjs/lib/parser.ts --transform arrow,multi-var,arrow-return,template,obj-shorthand",
+    "build-parser": "pegjs -c src/pegjs.config.js",
+    "lebab": "lebab --replace ./packages/pegjs/lib/parser.ts --transform arrow,multi-var,arrow-return,template,obj-shorthand",
     "build-dist": "rollup -c ./tools/bundler/rollup.config.js",
     "build-website": "node website/export",
     "clean": "rimraf public packages/pegjs/dist examples/*.js",
@@ -47,9 +48,9 @@
   },
   "devDependencies": {
     "@types/mocha": "^7.0.2",
+    "@types/dedent": "^0.7.0",
     "avec-ts": "^1.0.1",
     "babel-eslint": "^10.1.0",
-    "esm": "^3.2.25",
     "husky": "^4.2.5",
     "lebab": "^3.1.0",
     "prettier": "^2.0.5",
