--- a/packages/pegjs/package.json
+++ b/packages/pegjs/package.json
@@ -13,14 +13,15 @@
   ],
   "dependencies": {
     "@pegjs/runtime": "*",
-    "esm": "3.2.25",
+    "jsesc": "^3.0.1",
     "lodash": "^4.17.15"
   },
   "optionalDependencies": {
     "prettier": "^2.0.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.157"
+    "@types/lodash": "^4.14.157",
+    "@types/jsesc": "^2.5.1"
   },
   "homepage": "https://pegjs.org/",
   "repository": "pegjs/pegjs",
