--- a/tools/bundler/package.json
+++ b/tools/bundler/package.json
@@ -9,18 +9,21 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.1",
     "@babel/plugin-proposal-optional-chaining": "^7.10.3",
     "@babel/preset-typescript": "^7.10.1",
+    "@pegjs/main": "*",
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.0.4",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-transform-node-env-inline": "^0.4.3",
     "dedent": "0.7.0",
     "lodash-es": "^4.17.15",
     "rollup": "^2.18.0",
     "rollup-plugin-prettier": "^2.1.0",
+    "rollup-plugin-string": "^3.0.0",
     "typescript": "3.9.5"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.1",
-    "babel-plugin-minify-dead-code-elimination": "^0.5.1"
+    "rollup-plugin-preserve-shebang": "^1.0.1"
   }
 }
